# guardian_silo_bolsa

./: .gitignore  Dockerfile  LICENSE  README.md  docker_compose.yaml  pyproject.toml
backups/: data_backup.csv
src/guardian_silo_bolsa/: db.py  main.py  models.py  notification.py  simulator.py  utils.py
